--- a/style.css
+++ b/style.css
@@ -23,3 +23,39 @@ nav ul{
 nav li{
     margin: 0 10px 0 20px;
 }
+
+/*Main content*/
+
+/*Banner*/
+
+#banner{
+    position: relative;
+}
+
+#banner-img{
+    width: 100%;
+    height: 310px;
+    object-fit: cover;
+}
+
+#banner-content{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#banner-content img{
+    height: 60px;
+}
+
+h1{
+    color: white;
+    font-weight: 400;
+    font-size: 26px;
+}
+
