--- a/style.css
+++ b/style.css
@@ -59,3 +59,35 @@ h1{
     font-size: 26px;
 }
 
+/*Présentation*/
+
+#presentation{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+
+#presentation-description{
+    max-width: 700px;
+}
+
+#information{
+    max-width: 700px;
+    display: flex;
+}
+
+#information article{
+    padding: 10px;
+}
+
+#information h2{
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+#quote {
+    max-width: 600px;
+}
